SBP-68 - Fixed hero on firefox

--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -19,7 +19,10 @@
         }
     }
     &__intro {
-        max-width: -webkit-fill-available;
+        // max-width: -webkit-fill-available;
+        display: flex;
+        justify-content: center;
+
         &-content {
             background-image: url("../../img/code_bg.png");
             width: 130%;
@@ -34,8 +37,9 @@
                 position: absolute;
                 // height: inherit;
                 // width: inherit;
-                height: -webkit-fill-available;
-                width: -webkit-fill-available;
+                // height: -webkit-fill-available;
+                // width: -webkit-fill-available;
+                height: 100vh;
                 top: 0;
                 display: flex;
                 align-items: center;
